# cyber-range-lab-public

./: .gitignore  Makefile  README.md  ansible.cfg
ansible/playbooks/: 01-headscale-server.yml  10-target-web.yml  11-target-vault.yml  12-target-linux.yml  13-target-nc.yml  20-wazuh-server.yml  21-wazuh-agents.yml  22-wazuh-rules.yml  23-baseline-traffic.yml  30-kali-workstations.yml  31-blue-workstations.yml  40-headscale-enroll.yml
ansible/playbooks/templates/: headscale-config.yaml.j2
ansible/roles/nextcloud-victim/tasks/: main.yml
ansible/roles/sudo-misconfig/handlers/: main.yml
ansible/roles/sudo-misconfig/tasks/: main.yml
briefings/: blue-team-briefing.md  game-master-briefing.md  red-team-briefing.md  warmup-walkthrough.md
docs/: acl.hujson  architecture.md  attack-chain.md  detection-rules.md  hermes-gm-design.md  nc-target-spec.md  setup.md  spieler-onboarding.md  uebungsvereinbarung.md
hermes-gm-skill/: README.md  SKILL.md  gm_context.yaml  pyproject.toml
hermes-gm-skill/modules/: __init__.py  hint_policy.py  honcho_client.py  llm_provider.py  report_generator.py  safety_filter.py  telegram_router.py  wazuh_poller.py
hermes-gm-skill/prompts/: blue_hint.j2  red_hint.j2  report.j2  system.j2
hermes-gm-skill/tests/: test_hint_policy.py  test_safety_filter.py  test_wazuh_poller.py
lessons-learned/: _template.md
scripts/: cost-watchdog.sh  gen-preauth-keys.sh
terraform/: firewall.tf  hermes-gm.tf  main.tf  network.tf  outputs.tf  participants.local.yml.example  siem.tf  targets.tf  terraform.tfvars.example  variables.tf  workstations.tf
(+2 files in other folders)
