[project]
name = "hermes-gm-skill"
version = "0.1.0"
description = "KI-Spielleiter fuer das Cyber-Range-Lab"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31",
    "python-telegram-bot>=21.0",
    "google-genai>=1.0",
    "hcloud>=1.30",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "responses>=0.25",
    "pre-commit>=3.0",
]
